# fleuve

./: .coveragerc  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PARTITIONING.md  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  pytest.ini  sitemap.xml
.github/: PUBLISHING_CHECKLIST.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  lint.yml  publish.yml  tests.yml
FLEUVE_GO_PORT_ARCHITECTURE/: index.html
concepts/: index.html
contributing/: index.html
deployment/: index.html
docs/: FLEUVE_GO_PORT_ARCHITECTURE.md  concepts.md  contributing.md  deployment.md  index.md  installation.md  quick-start.md  readme.md  repository.md  scaling.md  testing.md
examples/: __init__.py
examples/minimal/: .env.example  README.md  docker-compose.yml  pyproject.toml
examples/minimal/minimal_example/: __init__.py  __main__.py  adapter.py  db_models.py  main.py  models.py  workflow.py
fleuve/: __init__.py  action_utils.py  actions.py  app.py  cli.py  config.py  delay.py  external_messaging.py  gateway.py  jetstream.py  metrics.py  model.py  partitioning.py  periodic.py  postgres.py  reconciliation.py  repo.py  runner.py  scaling.py  setup.py  stream.py  testing.py  tracing.py  truncation.py  validation.py
fleuve/cursor_skills/: __init__.py
fleuve/cursor_skills/fleuve-runner-infra/: SKILL.md  reference.md
fleuve/cursor_skills/fleuve-testing/: SKILL.md
fleuve/cursor_skills/fleuve-workflow-authoring/: SKILL.md  reference.md
fleuve/sf2/: .env.example  README.md  db_models.py  docker-compose.yml  main.py  pyproject.toml
fleuve/sf2/workflows/: __init__.py
fleuve/sf2/workflows/example_workflow/: __init__.py  adapter.py  models.py  workflow.py
fleuve/sf2/workflows/project/: __init__.py  adapter.py  models.py  workflow.py
fleuve/templates/multi_workflow_template/: .env.example  README.md  db_models.py  docker-compose.yml  main.py  pyproject.toml
fleuve/templates/multi_workflow_template/workflows/: __init__.py
fleuve/templates/multi_workflow_template/workflows/{{workflow_name}}/: __init__.py  adapter.py  models.py  workflow.py
fleuve/templates/project_template/: README.md  main.py  pyproject.toml
fleuve/templates/project_template/{{project_name}}/: __init__.py  adapter.py  db_models.py  models.py  workflow.py
fleuve/templates/ui_addon/: start_ui.sh  ui_server.py
fleuve/templates/ui_addon/ui/: README.md
fleuve/templates/ui_addon/ui/backend/: __init__.py  api.py  discovery.py  models.py
fleuve/templates/ui_addon/ui/frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
fleuve/templates/ui_addon/ui/frontend/src/: App.css  App.jsx  api.js  index.css  mockData.js
fleuve/templates/ui_addon/ui/frontend/src/components/: ActivityMonitor.jsx  Dashboard.jsx  DelayViewer.jsx  EventExplorer.jsx  WorkflowDetail.jsx  WorkflowList.jsx
fleuve/templates/ui_addon/ui/frontend/src/components/common/: Error.jsx  HelpOverlay.jsx  JsonTree.jsx  Loading.jsx  StateDiff.jsx  Table.jsx  TypeBadge.jsx  WorkflowTimeline.jsx
fleuve/templates/ui_addon/ui/frontend/src/hooks/: useKeyboardShortcuts.js
fleuve/tests/: __init__.py  conftest.py  models.py  test_action_utils.py  test_actions.py  test_config.py  test_delay.py  test_external_messaging.py  test_gateway.py  test_jetstream.py  test_model.py  test_perf.py  test_postgres.py  test_repo.py  test_runner.py  test_scaling.py  test_snapshots.py  test_stream.py
fleuve/ui/: __init__.py  default_models.py  server.py
fleuve/ui/backend/: __init__.py  api.py  models.py
fleuve/ui/frontend_dist/: .gitkeep  index.html
fleuve/ui/frontend_dist/assets/: index-Cn-uQRFb.js  index-DG7xGu6J.css  index-DctI1wZO.css  index-EowWiY3T.js
fleuve_ui/: README.md  __init__.py  db_models.py  example_integration.py  server.py  start_server.sh
fleuve_ui/backend/: api.py  discovery.py  models.py
fleuve_ui/frontend/: MOCK_DATA.md  index.html  package-lock.json  package.json  vite.config.js
fleuve_ui/frontend/src/: App.css  App.jsx  index.css
fleuve_ui/frontend/src/api/: client.js  mock.js
fleuve_ui/frontend/src/components/: ActivitiesList.jsx  ActivitiesTimeline.jsx  ActivityMonitor.jsx  CausationGraph.jsx  Dashboard.jsx  DelayViewer.jsx  DelaysList.jsx  EventExplorer.jsx  EventsList.jsx  Header.jsx  RunnersList.jsx  WorkflowDetail.jsx  WorkflowTimeline.jsx
fleuve_ui/frontend/src/components/common/: ColoredBadge.jsx  CopyButton.jsx  Error.jsx  FilterBar.jsx  JsonHighlight.jsx  Loading.jsx  PaginationBar.jsx  RefreshButton.jsx  Skeleton.jsx  Table.jsx
fleuve_ui/frontend/src/hooks/: useKeyboardShortcuts.js  useResizableTableColumns.jsx
fleuve_ui/frontend/src/utils/: colors.js  format.js
fleuve_ui/scripts/: add_runner_id_column.py
fleuve_ui/tests/: __init__.py  conftest.py  test_ui_api.py
installation/: index.html
quick-start/: index.html
readme/: index.html
repository/: index.html
scaling/: index.html
scripts/: build_ui.py
search/: search_index.json
testing/: index.html
