[project]
name = "fleuve"
version = "0.1.0"
description = "A type-safe event sourcing framework for Python with automatic state management and horizontal scaling"
authors = [
    {name = "doomervibe", email = "doomervibe111@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
keywords = [
    "event-sourcing",
    "workflow",
    "event-driven",
    "cqrs",
    "postgresql",
    "nats",
    "async",
    "state-management",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "zstandard (>=0.23.0,<1.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.45,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "nats-py (>=2.12.0,<3.0.0)",
    "faststream[nats] (>=0.6.4,<0.7.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "croniter (>=6.0.0,<7.0.0)",
    "click (>=8.3.1,<9.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn (>=0.32.0,<1.0.0)",
]

[project.urls]
Homepage = "https://github.com/doomervibe/fleuve"
Documentation = "https://github.com/doomervibe/fleuve#readme"
Repository = "https://github.com/doomervibe/fleuve"
Issues = "https://github.com/doomervibe/fleuve/issues"


[project.scripts]
fleuve = "fleuve.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
otel = ["opentelemetry-api>=1.20.0"]

[tool.black]
line-length = 88
target-version = ["py313"]
exclude = '''
/(
    \.git
    | \.venv
    | fleuve/templates
)/
'''

[tool.mypy]
exclude = ["fleuve/templates"]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "fleuve.tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
disallow_untyped_calls = false
disable_error_code = ["var-annotated", "no-any-return", "arg-type"]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (==1.3.0)",
    "black (>=25.12.0,<26.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "types-croniter",
]
