[project]
name = "{{project_name}}"
version = "0.1.0"
description = "{{project_title}} workflows"
requires-python = ">=3.13"
dependencies = [
    "fleuve>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio==1.3.0",
    "black>=25.0.0",
]
ui = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Multi-workflow project structure
packages = ["workflows"]

[tool.setuptools.package-data]
workflows = ["**/*.py"]
