[project]
name = "{{project_name}}"
version = "0.1.0"
description = "{{project_title}} workflow"
requires-python = ">=3.13"
dependencies = [
    "fleuve>=0.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio==1.3.0",
    "black>=25.0.0",
]
